<resources>
    <string name="app_name">الحب.كوم</string>
    <string name="title_activity_very_first">al70b الحب</string>
    <string name="title_activity_user_home">الرئيسية</string>
    <string name="title_activity_member_profile">صفحة العضو</string>
    <string name="title_Activity_register">للرئيسية</string>
    <string name="title_activity_login">للرئيسية</string>
    <string name="title_activity_settings">إعدادات</string>
    <string name="settings">خصائص</string>
    <string name="edTxtEmail">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="retype_password">تأكيد كلمة المرور</string>
    <string name="itemAboutUs">من نحن</string>
    <string name="itemPolicy">سياسة</string>
    <string name="rememberMe">تذكرني</string>
    <string name="automaticLogin">دخول تلقائي</string>
    <string name="logoNotShown">T h e l o g o p i c t u r e</string>
    <string name="empty_string"></string>
    <string name="welcome_message">أهلًا وسهلًا بكم في تطبيق التعارف الأول \"الحُب\"</string>
    <string name="welcomeSubtitle">وُلد تطبيق \"الحُب\" من الحاجة للعثور على حبٍ حقيقيٍ، حيثُ أن في عصرنا الحالي معظمُنا يعملُ حتى الساعات المتأخرة، فلا تتسنى لنا الفرصة للعثور على شريكِ حياتنا الملائم.\nيأتي تطبيقُ \"الحُب\" ليوفّر لك بديلًا بسيطًا وسهل الإستعمال للعثور على الحب بلمسة زر من أي جهاز حاسوبٍ أو هاتفٍ نقالٍ متصلٍ بالإنترنيت.\nيمكنك أن تبدأ برحلة إيجاد شريك حياتك عبر تطبيقنا هذا، أو عبر موقعنا Al7ob.com</string>
    <string name="register_i_am">أنا</string>
    <string name="male">ذكر</string>
    <string name="female">أنثى</string>
    <string name="register_name">الإسم</string>
    <string name="register_city">المدينة</string>
    <string name="register_date_of_birth">تاريخ الميلاد</string>
    <string name="register_choose_date">إضغط للإختيار</string>
    <string name="register_header_message">قم بتعبئة البيانات التالية من فضلك</string>
    <string name="register_looking_for">أبحث عن</string>
    <string name="register_looking_for_relation">أبحث عن علاقة</string>
    <string name="register_chat">محادثة</string>
    <string name="register_friendship">صداقة</string>
    <string name="register_marriage">زواج</string>
    <string name="register_love">حب</string>
    <string name="register_dating">مواعدة</string>
    <string name="register_account_info">معلومات الحساب</string>
    <string name="register_personal_info">معلومات شخصية</string>
    <string name="register_interest_info">إهتمامات</string>
    <string name="register_successfully">تمت عملية التسجيل بنجاح\nتم إرسال رسالة تأكيد إلى صندوق بريدك، من فضلك قم بتأكيد التسجيل، ثم عد للبدء بالدردشة</string>
    <string name="register_message_personel">معلومات أساسية</string>
    <string name="register_message_account">معلومات الحساب</string>
    <string name="register_birthdate">تاريخ الولادة</string>
    <string name="register_in_progress">إنتظر من فضلك، جاري التسجيل...</string>
    <string name="login_actionbarItem">دخول</string>
    <string name="register_actionbarItem">إشتراك</string>
    <string name="privacy_actionbarItem">سياسة الخصوصية</string>
        <string name="error_invalid_email_pass_syntax">صيغة البريد الإلكتروني أو كلمة المرور غير صحيحة
        </string>
        <string name="error_invalid_password_syntax">من فضلك قم بإدخال كلمة مرور من 5 أحرف على الأقل
        </string>
        <string name="error_invalid_email_or_password">البريد الإلكتروني و/أو كلمة المرور غير صحيحة
        </string>
        <string name="error_server_connection_falied">لم نتمكن من الإتصال بالخادم، الرجاء فحص إتصالك
            بالإنترنيت
        </string>
    <string name="error_please_enter_valid_email">من فضلك قم بإدخال بريد إلكتروني بالصيغة الملائمة</string>
    <string name="error_general">Error:</string>
    <string name="error_red_icon">عليك بملئ البيانات كما هو مطلوب منك</string>
    <string name="error_choose_date">عليك إختيار تاريخ الولادة</string>
    <string name="error_should_be_above_18">مسموح التسجيل لمن هم في سن الـ18 وما فوق</string>
    <string name="error_choose_interest">عليك إختيار جنس من تبحث عنه</string>
    <string name="error_choose_social_status">عليك إختيار الحالة الإجتماعية</string>
    <string name="error_choose_interest_purpose">عليك إختيار إهتمام واحد على الأقل</string>
    <string name="error_choose_proper_values_for_date">على الأجيال المدخلة أن تكون بين %1$d و %2$d</string>
    <string name="error_downloading_profile_picture">لا نتمكن من تحميل صورتك الشخصية، قم بإعادة تشغيل التطبيق، إذا لم تحل المشكلة إتصل بنا</string>
    <string name="error_fill_your_name">من فضلك قم بتعبئة إسمك، حرفين على الأقل</string>
    <string name="error_fill_your_city">من فضلك قم بتعبئة مدينتك/منطقتك، 3 حروف على الأقل</string>
    <string name="done">تم</string>
    <string name="edit">تعديل</string>
    <string name="cancel">إلغاء</string>
    <string name="button_ok">أوكي</string>
    <string name="button_cancel">إلغاء</string>
    <string name="edit_user_data">تعديل البيانات</string>
    <string name="welcome_user"> أهلًا بعودتك %1$s,\nجاري الدخول لحسابك...</string>
    <string name="loading_data">جاري تحميل البيانات</string>
    <string name="error">رسالة خطأ</string>
    <string name="caution">رسالة تحذير</string>
    <string name="please_wait">إنتظر من فضلك</string>
    <string name="friends">أصدقاء</string>
    <string name="messages">رسائلي</string>
    <string name="logout_message">جاري الخروج من حسابك</string>
    <string name="press_back_again_to_exit">إضغط "رجوع" مرة أخرى للخروج من التطبيق</string>
    <string name="your_status">حالتك</string>
    <string name="search_for_friend">إبحث عن صديق</string>
    <string name="choose_from_list">إختر من القائمة</string>
    <string name="open_drawer">إفتح الجرار</string>
    <string name="close_drawer">أغلق الجرار</string>
    <string name="social_status">الحالة الإجتماعية</string>
    <string name="country">الدولة</string>
    <string name="location_gps">إفتراضي GPS</string>
    <string name="location_manual">تحديد يدوي</string>
    <string name="messages_with">رسائلك مع</string>
    <string name="copy">نسخ</string>
    <string name="delete">حذف</string>
    <string name="send">أرسل</string>
    <string name="follow_steps_to_register">إملأ بياناتك كاملةً ثم إتبع الخطوة التالية للتسجيل</string>
    <string name="forgot_password">نسيت كلمة المرور؟</string>
    <string name="forgot_password_header_message">من فضلك قم بإدخال بريدك الإلكتروني لإرسال رسالة إلى حسابك لتغيير كلمة المرور</string>
    <string name="forgot_password_title">إستعادة كلمة المرور</string>
    <string name="loading_conversations">جاري تحميل محادثاتك...</string>
    <string name="failed_loading_conversations">تحميل المحادثات لم ينجح، إضغط للمحاولة مرة أخرى</string>
    <string name="empty_conversations">لا يوجد لديك محادثات</string>
    <string name="complete_register">إتمام التسجيل</string>
    <string name="register_message_success">رسالة</string>
    <string name="register_oops">رسالة خطأ</string>
    <string name="logging_in">جاري فحص البيانات المدخلة...</string>
    <string name="success_message_title">رسالة نجاح</string>
    <string name="age">العمر</string>
    <string name="from">من</string>
    <string name="to">إلى</string>
    <string name="year">سنة</string>
    <string name="search">بحث</string>
    <string name="current_search">البحث الحالي</string>
    <string name="members_with_pictures_only">أعضاء مع صور فقط</string>
    <string name="members_online_only">أعضاء متواجدون فقط</string>
    <string name="members_close_by">أعضاء في منطقتي فقط</string>
    <string name="search_in_members">بحث عن أعضاء</string>
    <string name="members_search_query_gender">الجنس: %1$s</string>
    <string name="members_search_query_age">الجيل: </string>
    <string name="members_search_query_age_from">من %1$dسنة فما فوق </string>
    <string name="members_search_query_age_to">حتى %1$d سنة</string>
    <string name="members_search_query_age_between">ما بين %1$d و %2$d سنة</string>
    <string name="members_search_query_options">خيارات إضافية: </string>
    <string name="no_more_search_options">لا خيارات أخرى</string>
    <string name="not_specified">غير محدد</string>
    <string name="age_of">%1$d سنة</string>
    <string name="search_in_process">جاري البحث...</string>
    <string name="no_members_were_found">لم نجد أعضاءً بالوصف المطلوب</string>
    <string name="members_age_help">يمكنك عدم تحديد عمر معين وسيتم تجاهل القيمة الناقصة</string>
    <string name="cm">سم</string>
    <string name="none">غير متوفر</string>
    <string name="message_was_sent">تم إرسال رسالة للمستخدم %1$s</string>
    <string name="pull_to_refresh_pull_label">إسحب لتحميل المزيد من الرسائل</string>
    <string name="pull_to_refresh_release_label"></string>
    <string name="pull_to_refresh_refreshing_label">جاري التحميل...</string>
    <string name="pull_to_refresh_tap_label">إضغط هنا لمشاهدة الرسائل القديمة</string>
    <string name="no_more_loads_label">لا يوجد رسائل أخرى</string>
    <string-array name="countries">
        <item>الأردن</item>
        <item>سوريا</item>
        <item>السودان</item>
        <item>ليبيا</item>
        <item>مصر</item>
        <item>اليمن</item>
        <item>فلسطين</item>
    </string-array>
    <string-array name="mStatus">
        <item>أعزب/عزباء</item>
        <item>متزوج/ة</item>
        <item>آخر</item>
    </string-array>
    <string name="btnLogin">دخول</string>
    <string name="gender">الجنس</string>
    <string name="height">الطول</string>
    <string name="body_shape">شكل الجسم</string>
    <string name="eyes_colors">لون العينين</string>
    <string name="work">العمل</string>
    <string name="education">التعليم</string>
    <string name="religion">الديانة</string>
    <string name="alcohol">المشروبات الروحية</string>
    <string name="smoking_habit">عادات التدخين</string>
    <string name="about_me">المزيد عني:</string>
    <string-array name="drawer_values">
        <item>الرئيسية</item>
        <item>حسابي</item>
        <item>محادثات</item>
        <item>بحث عن أعضاء</item>
        <item>بحث متقدم</item>
        <item>نظام الملائمة</item>
        <item>خروج</item>
    </string-array>
    <string-array name="user_data_titles">
        <item>  صور  </item>
        <item>معلومات متقدمة</item>
        <item>معلومات أساسية</item>
        <item>معلومات الدخول</item>
    </string-array>
    <string name="friends_requests">يوجد لديك %1$d طلبات صداقة</string>
    <string-array name="search_options">
        <item>بحث متقدم</item>
        <item>بحث سريع</item>
    </string-array>
    <string name="profile_picture">الصورة الشخصية</string>
    <string name="click_photo_to_enlarge">أنقر على الصورة لرؤيتها بالحجم الكامل</string>
    <string name="yes">نعم</string>
    <string name="no">كلا</string>
    <string name="video_call">إتصال فيديو</string>
    <string name="next">التالي</string>
    <string name="register_info_simple_data">بعض المعلومات الأساسية قد تقّرب القلوب</string>
    <string name="start">إبدأ</string>
    <string name="register_intro_title_free_registeration">الإشتراك مجاني !!</string>
    <string name="register_intro_title">الانضمام إلى مُجتمع \"الحُب\" هو أمر بسيط, سهل، ومجاني. بعد عملية التسجيل القصيرة ستُفتح لك أبوابُ موقعنا للبحث عن نصفك الآخر في رحاب البلدان العربية.</string>
    <string name="register_intro_press_start_to_proceed">إضغط على إبدأ لكي تبدأ بالتسجيل</string>
    <string name="previous">السابق</string>
    <string name="your_album">ألبوم الصور الخاص بك</string>
    <string name="clear_history">حذف المحادثة</string>
    <string name="dont_ask_me_again">لا تسألني مرةً أخرى</string>
    <string name="please_set_a_profile_picture">تفيد الإحصائيات لدينا أن من لديهم صورة شخصية يجذبون إهتمام الآخرين أكثر. هل تودّ أن تضبط صورتك الشخصية ?</string>
    <string name="user_basic_search_info">تمكنك خدمةُ البحثِ السريعِ من توفير وقتك عبرَ تبسيط وتسهيل واجهة البحث</string>
    <string name="profile">الصفحة الشخصية</string>
</resources>