<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:activity="src.res.core.activities.UserHomeActivity">

    <item android:id="@+id/menu_item_user_conversation_profile"
        android:icon="@drawable/ic_action_user_holo_dark"
        android:showAsAction="ifRoom"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_user_conversation_video"
        android:icon="@drawable/ic_action_video"
        android:showAsAction="ifRoom"
        android:title="@string/video_call"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_user_conversations_clear_history"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="never"
        android:title="@string/clear_history"
        app:showAsAction="never" />

</menu>
