<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginBottom="50dp">

    <TextView
        android:id="@+id/tv_register_intro_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/register_intro_title_free_registeration"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        />

    <TextView
        android:id="@+id/tv_register_intro_free"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/register_intro_title"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        />

    <TextView
        android:id="@+id/tv_register_intro_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/register_intro_press_start_to_proceed"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        />

    <Button
        android:id="@+id/btn_register_start"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:background="@drawable/red_button"
        android:minWidth="140dp"
        android:text="@string/start" />
</LinearLayout>