<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true"
    android:layoutDirection="rtl">

    <RelativeLayout
        android:id="@+id/layout_members_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="inherit"
        android:paddingBottom="12dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/tv_basic_search_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="5dp"
            android:text="@string/user_basic_search_info"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_fragment_basic_search_look_for_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_basic_search_info"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:padding="9dp"
            android:text="@string/register_looking_for"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/layout_fragment_basic_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_fragment_basic_search_look_for_gender"
            android:layout_centerHorizontal="true"
            android:layoutDirection="inherit"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_members_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/male"
                android:textColor="@color/black"
                android:textSize="20sp" >

                <requestFocus />
            </CheckBox>

            <CheckBox
                android:id="@+id/checkbox_members_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/female"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_basic_search_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/layout_fragment_basic_search"
            android:layout_marginStart="8dp"
            android:padding="9dp"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_fragment_basic_Search_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_basic_search_age"
            android:layout_centerHorizontal="true"
            android:layoutDirection="inherit"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_members_age_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="2dp"
                android:text="@string/from"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text_members_age_from"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:nextFocusLeft="@+id/edit_text_members_age_to"
                android:nextFocusUp="@id/edit_text_members_age_from"
                android:singleLine="true"
                android:textColor="@color/dark_red"

                />

            <TextView
                android:id="@+id/text_view_members_age_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="2dp"
                android:text="@string/to"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text_members_age_to"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true"
                android:textColor="@color/dark_red"

                />

            <TextView
                android:id="@+id/text_view_members_age_years"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="2dp"
                android:text="@string/year"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_members_temp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_fragment_basic_Search_age"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/checkbox_members_with_pictures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/members_with_pictures_only"
                android:textColor="@color/black"
                android:textSize="20sp"/>


            <CheckBox
                android:id="@+id/checkbox_members_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/members_online_only"
                android:textColor="@color/black"
                android:textSize="20sp"/>


            <CheckBox
                android:id="@+id/checkbox_members_close_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/members_close_by"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_members_search"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_members_temp2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/red_button"
            android:minWidth="140dp"
            android:text="@string/search" />

    </RelativeLayout>
</ScrollView>