<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/profile_picture"
        android:gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:textSize="23sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/image_view_user_data_pictures_profile"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:src="@drawable/failed_sad_face"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/your_album"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/click_photo_to_enlarge"
        android:textSize="14sp"/>

    <GridView
        android:id="@+id/grid_view_user_pictures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="14dp"
        android:numColumns="3"
        android:verticalSpacing="7dp"
        android:stretchMode="columnWidth"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_view_empty_grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/you_have_not_uploaded_photo"/>

</LinearLayout>